--- a/app/views/layouts/_logged_in_footer.html.erb
+++ b/app/views/layouts/_logged_in_footer.html.erb
@@ -4,7 +4,7 @@
 		<div class="col-xs-4" align="center">
 			<%=
         link_to_unless_current image_tag("games_clicked_32.png") +
-  			"<br/>Games".html_safe, games_path,
+  			"<br/>Games".html_safe, my_games_path,
   			alt: "Games", class: "img-responsive footer_active_link"
       %>
 		</div>
