--- a/app/views/moves/new.html.erb
+++ b/app/views/moves/new.html.erb
@@ -1,4 +1,7 @@
-<div class="lead col-md-6 col-md-offset-3">
+<% provide(:title, "New Move") %>
+<% provide(:header, "New Move") %>
+
+<div>
   <%= render "games/recap" %>
   <br/>
   <br/>
