--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,7 @@
-<% provide(:header, 'Edit Profile') %>
+<% provide(:title, "Edit Profile") %>
+<% provide(:header, "Edit Profile") %>
 
-<div class="col-md-6 col-md-offset-3 well">
+<div class="well">
   <%= form_for(@user) do |f| %>
     <%= render 'shared/error_messages' %>
 
