--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,5 @@
-<% provide(:title, 'Users') %>
+<% provide(:title, "Users") %>
+<% provide(:header, "Users") %>
 
 <ul class="users">
   <% @users.each do |user| %>
