--- a/app/views/games/_form.html.erb
+++ b/app/views/games/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-6 col-md-offset-3">
+<div>
   <%= form_for @game do |f| %>
     <%= render "shared/game_errors" %>
     <div class="well">
@@ -18,7 +18,7 @@
       </div>
       <div class="form-group">
         <%= f.label :color, class: "sr-only" %>
-        <%= f.text_field :color, class: "form-control", placeholder: "Color* (white or black)" %>
+        <%= f.text_field :color, class: "form-control", placeholder: "Your Color* (white or black)" %>
       </div>
       <div class="form-group">
         <%= f.label :result, class: "sr-only" %>
