--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, @user.username) %>
 <% provide(:header, @user.username) %>
 
 <p class="lead">
@@ -7,7 +8,7 @@
   Number of games: <%= @user.games.count %>
 </p>
 
-<% if logged_in? && current_user?(@user) %>
+<% if logged_in_and_current_user?(@user) %>
   <p>
     <%= link_to "Edit My Info", edit_user_path(current_user), class: "btn btn-default form-control" %>
   </p>
