Updated head and added google analytics.

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,9 +1,9 @@
 <div class="center">
   <div>
-    <%= image_tag "kuda.png" %>
+    <%= image_tag "kuda.png", class: "img-responsive" %>
   </div>
   <div>
-    <%= link_to "Sign Up for Free", signup_path, class: "btn btn-lg btn-default " %>
+    <%= link_to "Sign Up for Free", signup_path, class: "btn btn-lg btn-default" %>
     <br/>
     <small>
       Already have an account?
