--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Kuda | <%= full_title(yield(:title)) %></title>
-    <%= stylesheet_link_tag    'application', media: 'all' %>
-    <%= javascript_include_tag 'application' %>
-    <%= csrf_meta_tags %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-    <!--[if lt IE 9]>
-      <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js">
-      </script>
-    <![endif]-->
-  </head>
+  <%= render "shared/head" %>
   <body>
     <%= render "layouts/logged_in_header" %>
     <div class="container">
@@ -33,5 +23,6 @@
       <% end %>
       <%= debug(params) if Rails.env.development? %>
     </div>
+    <%= render "shared/google_analytics" %>
   </body>
 </html>
