--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="center">
   <div>
-    <%= image_tag "kuda.png", class: "img-responsive" %>
+    <%= image_tag "kuda.png", class: "img-responsive", id: "kuda" %>
   </div>
   <div>
     <%= link_to "Sign Up for Free", signup_path, class: "btn btn-lg btn-default" %>
