Testing game move order.

--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -15,7 +15,7 @@
   <meta name=”twitter:description” content=”Kuda - a simple and easy app for storing your chess games online.” />
   <meta name=”twitter:url” content=”https://cryptic-oasis-3561.herokuapp.com/” />
   <meta name=”twitter:image” content=”http://www.yourdomain.com /image-name.jpg” />
-  <title>Kuda | <%= full_title(yield(:title)) %></title>
+  <title><%= full_title(yield(:title)) %></title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
