--- a/app/views/games/_scoresheet.html.erb
+++ b/app/views/games/_scoresheet.html.erb
@@ -6,7 +6,7 @@
     <th></th>
     <th></th>
   <% end %>
-  <% @game.moves.reverse.each_with_index do |move, num| %>
+  <% @game.moves.order(:created_at).each_with_index do |move, num| %>
     <tr>
       <td><%= num + 1 %>.</td>
       <td><%= move.white %></td>
